--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 * { margin: 0; padding: 0; box-sizing: border-box; }
-body { font: 13px Helvetica, Arial; }
-form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-form button { width: 9%; background: #27ae60; border: none; padding: 10px; color: white; font-size: 1em;}
+body { font: 1.5em Helvetica, Arial; }
+form { background: #2c3e50; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+form input { border: 0; padding:0.5em; width: 85%; height: 2px; margin-right: .5%; height: 2em; font-size: 2em;}
+form button { width: 14%; height: 2em; background: #27ae60; border: none; padding: 10px; color: white; font-size: 2em;}
 #messages { list-style-type: none; margin: 0; padding: 0; }
 #messages li { padding: 5px 10px; }
 #messages li:nth-child(odd) { background: #eee; }
