--- a/style.css
+++ b/style.css
@@ -1,4 +1,18 @@
-* { margin: 0; padding: 0; box-sizing: border-box; }
+/*==============================
+  GENERAL STYLES
+================================*/
+
+/*https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/*/
+*, html {
+  box-sizing: border-box;
+  margin:0;
+  padding:0;
+}
+
+*:before, *:after {
+  box-sizing: inherit;
+}
+
 body { 
   font: 1.5em Helvetica, Arial; 
   height: 100%; 
@@ -6,21 +20,74 @@ body {
   overflow:auto;
 }
 
+
+
+/*==============================
+  #MESSAGE-INPUT-FORM
+================================*/
 form {
   background: #2c3e50;
+  height: 2.3em; 
+  width: 100%;
   padding: 3px;
   position: fixed;
   bottom: 0;
-  width: 100%;
-  height: 2.3em; }
+  margin: 0;
+}
 
+  form input { 
+    border: 0;
+    font-size: 1em;
+    /*height: 2px;*/
+    height: 2em;
+    width: 85%;
+    padding:0.5em;
+    margin-right: .5%;
+  }
+  
+  form button { 
+    background: #27ae60;
+    border: none;
+    color: white;
+    font-size: 1em;
+    height: 2em;
+    width: 14%;
+    padding: 10px; 
+  }
+  
+/*==============================
+  #JOINING-CHAT-STRAPLINE
+================================*/  
 
-form input { border: 0; padding:0.5em; width: 85%; height: 2px; margin-right: .5%; height: 2em; font-size: 1em;}
-form button { width: 14%; height: 2em; background: #27ae60; border: none; padding: 10px; color: white; font-size: 1em;}
-#messages { list-style-type: none; margin: 0; padding: 0; max-height 90%;}
-#messages li { padding: 5px 10px; }
-#messages li:nth-child(odd) { background: #eee; }
-#joiners {  height: 2em; color: white; padding: 0.5em 0 1em 2em; z-index: 3; background-color:#2c3e50; opacity:0.9;}
+#joiners {
+  background-color:#2c3e50;
+  color: white;
+  height: 2em;
+  opacity:0.9;
+  padding: 0.5em 0 1em 2em;
+  z-index: 3;
+}
+
 #joined  { color: #40d47e; }
+  
+
+
+/*==============================
+  #MESSAGES-WINDOW
+================================*/    
+#messages {
+  list-style-type: none;
+  margin: 0;
+  max-height: 90%;
+  padding: 0;
+}
+
+  #messages li { padding: 5px 10px; }
+    
+    #messages li:nth-child(odd) { background: #eee; }
+
+
+/* == Individual messages == */
 .time { color: #2c3e50; }
+
 .name { color: #2980b9; }
