--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ form {
   font-size: 1em;
   text-align: center;
   padding: 0.5em;
+  word-wrap: break-word;
 }
 
 #joined  { color: #40d47e; }
@@ -95,6 +96,7 @@ form {
 .name {
   color: #2980b9;
   margin-right: 0.8em;
+  word-wrap: break-word;
 }
 
 .name,
